--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+
+.cloud/*
+.storage/*
+certbot/*
 .HA_VERSION
 .uuid
 .google_maps_location_sharing.cookies
-home-assistant.log
-*.db
 secrets.yaml
-.cloud/*
-.storage/*
 *.mp3
-certbot/*
+*.log
+*.db
+*.key
+*.pem
+*.cert
+*.conf
+*.temp
