--- a/automations.yaml
+++ b/automations.yaml
@@ -1,257 +1,17 @@
-- alias: Bathroom light on
-  trigger:
-    platform: state
-    entity_id: binary_sensor.motion_sensor_158d000121c8ca
-    to: 'on'
-  action:
-    service: light.turn_on
-    entity_id: light.bathroom_light
-
-- alias: Bathroom light off
-  trigger:
-    platform: state
-    entity_id: binary_sensor.motion_sensor_158d000121c8ca
-    to: 'off'
-    for: '00:03:00'
-  action:
-    service: light.turn_off
-    entity_id: light.bathroom_light
-
-- alias: Cupboard light on
-  trigger:
-    platform: state
-    entity_id: binary_sensor.motion_sensor_158d0001656352
-    to: 'on'
-  action:
-    service: light.turn_on
-    entity_id: light.cupboard_light
-
-- alias: Cupboard light off
-  trigger:
-    platform: state
-    entity_id: binary_sensor.motion_sensor_158d0001656352
-    to: 'off'
-    for: '00:00:30'
-  action:
-    service: light.turn_off
-    entity_id: light.cupboard_light
-
-- alias: Gateway light on
-  trigger:
-    platform: numeric_state
-    entity_id: sensor.illumination_34ce00889d79
-    below: 200
-  action:
-    - service: light.turn_on
-      data:
-        entity_id: light.gateway_light_34ce00889d79
-        color_name: azure
-
-- alias: Gateway light off
-  trigger:
-    platform: numeric_state
-    entity_id: sensor.illumination_34ce00889d79
-    above: 500
-  action:
-    service: light.turn_off
-    entity_id: light.gateway_light_34ce00889d79
-
-- alias: Heating and purifiers off every night
+- alias: Heating off every night
   trigger:
     platform: time
     at: '22:30:00'
   action:
-    - service: fan.turn_off
-      data:
-        entity_id: group.purifiers
-    - service: script.set_heating
-      data:
-        mode: none
-        temperature: 18
+    - service: script.heating_night
 
-- alias: Heating on every workday morning
+- alias: Heating on every morning
   trigger:
     platform: time
-    at: '5:30:00'
+    at: '6:30:00'
   action:
     - delay: "{{ '00:00:00' if is_state('binary_sensor.workday_sensor', 'on') else '02:00:00' }}"
-    - service: script.set_heating
-      data:
-        mode: none
-        temperature: 20
-
-- alias: Kodi Library Updates
-  trigger:
-    platform: time
-    at: '02:00:00'
-  action:
-    service: kodi.call_method
-    data:
-      entity_id: media_player.kodi
-      method: VideoLibrary.Scan
-
-- alias: Kitchen lights on
-  trigger:
-    platform: event
-    event_type: xiaomi_aqara.click
-    event_data:
-      entity_id: binary_sensor.switch_158d0001a21126
-      click_type: single
-  action:
-    - service: light.turn_on
-      data:
-        entity_id: light.kitchen_light
-    - service: light.turn_on
-      data:
-        entity_id: light.kitchen_lightstrip
-
-- alias: Kitchen lights off
-  trigger:
-    platform: event
-    event_type: xiaomi_aqara.click
-    event_data:
-      entity_id: binary_sensor.switch_158d0001a21126
-      click_type: hold
-  action:
-    - service: light.turn_off
-      data:
-        entity_id: light.kitchen_light
-    - service: light.turn_off
-      data:
-        entity_id: light.kitchen_lightstrip
-
-- alias: Vacuum kitchen
-  trigger:
-    platform: event
-    event_type: xiaomi_aqara.click
-    event_data:
-      entity_id: binary_sensor.switch_158d0001a21126
-      click_type: double
-  action:
-    service: script.turn_on
-    data:
-      entity_id: script.vacuum_kitchen
-
-- alias: Vacuum the bathroom
-  trigger:
-    platform: event
-    event_type: xiaomi_aqara.click
-    event_data:
-      entity_id: binary_sensor.switch_158d00015639f9
-      click_type: double
-  action:
-    service: script.turn_on
-    data:
-      entity_id: script.vacuum_bathroom
-
-- alias: Room cleanup
-  trigger:
-    - platform: state
-      entity_id: input_select.vacuum_room
-      from: 'Select room'
-  action:
-    - service: script.turn_on
-      data_template:
-        entity_id: >
-          {% if is_state("input_select.vacuum_room", "Bedroom") %}
-            script.vacuum_bedroom
-          {% elif is_state("input_select.vacuum_room", "Living Room") %}
-            script.vacuum_living_room
-          {% elif is_state("input_select.vacuum_room", "Kitchen") %}
-            script.vacuum_kitchen
-          {% elif is_state("input_select.vacuum_room", "Bathroom") %}
-            script.vacuum_bathroom
-          {% elif is_state("input_select.vacuum_room", "Hall") %}
-            script.vacuum_hall
-          {% else %}
-            none
-          {% endif %}
-    - service: input_select.select_option
-      data:
-        entity_id: input_select.vacuum_room
-        option: Select room        
-
-- alias: Hall light on when door opens
-  trigger:
-    platform: state
-    entity_id: binary_sensor.door_window_sensor_158d0001a647fc
-    to: 'on'
-  action:
-    service: light.turn_on
-    data:
-      entity_id: light.hall_light
-
-- alias: Hall light off after door closes
-  trigger:
-    platform: state
-    entity_id: binary_sensor.door_window_sensor_158d0001a647fc
-    to: 'off'
-    for: '00:01:00'
-  action:
-    service: light.turn_off
-    data:
-      entity_id: light.hall_light
-
-- alias: Hall light toggle
-  trigger:
-    platform: event
-    event_type: xiaomi_aqara.click
-    event_data:
-      entity_id: binary_sensor.switch_158d00015639f9
-      click_type: single
-  action:
-    - service: light.toggle
-      data:
-        entity_id: light.hall_light
-
-- alias: Turn on speaker when Kodi is playing
-  trigger:
-    platform: state
-    entity_id: media_player.kodi
-    to: 'playing'
-  action:
-    - service: media_player.turn_on
-      data:
-        entity_id: "media_player.tv_speaker"
-    - service: media_player.turn_off
-      data:
-        entity_id:
-          - media_player.lounge
-  
-- alias: Turn on speaker when Chromecast is playing
-  trigger:
-    platform: state
-    entity_id: media_player.living_room_tv
-    to: 'playing'
-  action:
-    - service: media_player.turn_on
-      data:
-        entity_id: "media_player.tv_speaker"
-    - service: media_player.turn_off
-      data:
-        entity_id:
-          - media_player.lounge
-
-- alias: Purifiers off when cleanup done
-  trigger:
-    platform: state
-    entity_id: vacuum.xiaomi_vacuum_cleaner
-    from: cleaning
-  action:
-    service: fan.turn_off
-    data:
-      entity_id: group.purifiers
-
-- alias: Notify when door opens
-  trigger:
-    platform: state
-    entity_id: binary_sensor.door_window_sensor_158d0001a647fc
-    to: 'on'
-  action:
-    service: notify.notify
-    data:
-      title: Home Assistant
-      message: Door just opened
+    - service: script.heating_init
 
 - alias: Back home
   trigger:
