Cleanup, new automations

--- a/automations.yaml
+++ b/automations.yaml
@@ -60,3 +60,35 @@
         entityid: '{{trigger.entity_id}}'
         tostate: '{{trigger.to_state.state}}'
         fromstate: '{{trigger.from_state.state}}'
+
+- alias: Gateway light on
+  trigger:
+    platform: numeric_state
+    entity_id: sensor.xiaomi_gateway_illuminance
+    below: 450
+  action:
+    - service: light.turn_on
+      data:
+        entity_id: light.xiaomi_gateway_light
+        color_name: azure
+
+- alias: Gateway light off
+  trigger:
+    platform: numeric_state
+    entity_id: sensor.xiaomi_gateway_illuminance
+    above: 600
+  action:
+    service: light.turn_off
+    entity_id: light.xiaomi_gateway_light
+
+- alias: Play radio
+  trigger:
+    - platform: state
+      entity_id: input_select.play_radio
+      from: 'Select radio'
+  action:
+    - service: script.play_radio
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.play_radio
+        option: 'Select radio'
