--- a/scripts.yaml
+++ b/scripts.yaml
@@ -144,3 +144,23 @@ notify_presence:
         {% else %}
           {{-name }} left {{fromstate}} and arrived at {{tostate}}
         {% endif %}
+
+vacuum_kitchen:
+  sequence:
+    - service: vacuum.send_command
+      data:
+        entity_id: vacuum.xiaomi_vacuum_cleaner
+        command: app_zoned_clean
+        params: [[22390,19943,24740,23143,1]]
+
+play_radio:
+  sequence:
+    - service: media_player.play_media
+      data_template:
+        entity_id: media_player.downstairs_speakers
+        media_content_type: channel
+        media_content_id: >
+          {% if is_state("input_select.play_radio", "Český rozhlas Radiožurnál") %}https://ice7.radia.cz/cro1-128.aac
+          {% elif is_state("input_select.play_radio", "Rádio Krokodýl") %}http://icecast4.play.cz/krokodyl128.mp3
+          {% else %}none
+          {% endif %}
